force-app/main/default/objects/Activity/fields/Agrupador__c.field-meta.xml
<CustomField>
    <fullName>Agrupador__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agrupador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>