force-app/main/default/objects/Activity/fields/AV_ALVEN__c.field-meta.xml
<CustomField>
    <fullName>AV_ALVEN__c</fullName>
    <description>Código ALVEN informado por AVE</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ALVEN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>