force-app/main/default/objects/Activity/fields/AV_AssociatedOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>AV_AssociatedOpportunityId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AssociatedOpportunityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>