force-app/main/default/objects/Activity/fields/AV_BatchProcessRegularizeHCA_Date__c.field-meta.xml
<CustomField>
    <fullName>AV_BatchProcessRegularizeHCA_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Process Batch - Regularizar HCA Fecha</label>
    <type>DateTime</type>
</CustomField>