force-app/main/default/objects/Activity/fields/AV_BranchPhysicalMeet__c.field-meta.xml
<CustomField>
    <fullName>AV_BranchPhysicalMeet__c</fullName>
    <description>Oficina donde el gestor se reúne con el cliente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Oficina física de reunión</label>
    <type>TextArea</type>
</CustomField>