force-app/main/default/objects/Activity/fields/AV_Center__c.field-meta.xml
<CustomField>
    <fullName>AV_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Centro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>