force-app/main/default/objects/Activity/fields/AV_CenterRtIndex__c.field-meta.xml
<CustomField>
    <fullName>AV_CenterRtIndex__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CenterRtIndex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>