force-app/main/default/objects/Activity/fields/AV_Chanel__c.field-meta.xml
<CustomField>
    <fullName>AV_Chanel__c</fullName>
    <description>Informa de la aplicación de origen del evento</description>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Now</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Mis Clientes</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Meeter</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Contact Center</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Noa App</label>
            </value>
            <value>
                <fullName>Now</fullName>
                <label>Now Old</label>
            </value>
            <value>
                <fullName>MisClientes</fullName>
                <label>MisClientes Old</label>
            </value>
            <value>
                <fullName>Meeter</fullName>
                <label>Meeter Old</label>
            </value>
            <value>
                <fullName>ContactCenter</fullName>
                <label>Contact Center Old</label>
            </value>
            <value>
                <fullName>Contact Center</fullName>
                <isActive>false</isActive>
                <label>Contact Center Invalidado</label>
            </value>
            <value>
                <fullName>¿?</fullName>
                <isActive>false</isActive>
                <label>¿?</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>