force-app/main/default/objects/Activity/fields/AV_CodigoGestorAsignado__c.field-meta.xml
<CustomField>
    <fullName>AV_CodigoGestorAsignado__c</fullName>
    <description>Código (matricula) del gestor asignado</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Código Gestor Asignado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>