force-app/main/default/objects/Activity/fields/AV_ColorEtiqueta__c.field-meta.xml
<CustomField>
    <fullName>AV_ColorEtiqueta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Color etiqueta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>