force-app/main/default/objects/Activity/fields/AV_Concepto2__c.field-meta.xml
<CustomField>
    <fullName>AV_Concepto2__c</fullName>
    <description>Concepto 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>&gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>