force-app/main/default/objects/Activity/fields/AV_ConVenta__c.field-meta.xml
<CustomField>
    <fullName>AV_ConVenta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Con venta</label>
    <type>Checkbox</type>
</CustomField>