force-app/main/default/objects/Activity/fields/AV_DurationToNoticeToManager__c.field-meta.xml
<CustomField>
    <fullName>AV_DurationToNoticeToManager__c</fullName>
    <label>Duración aviso previo al gestor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>