force-app/main/default/objects/Activity/fields/AV_EventoEstado__c.field-meta.xml
<CustomField>
    <fullName>AV_EventoEstado__c</fullName>
    <formula>CASE( CSBD_Evento_Estado__c ,&quot;Pendiente&quot;,&quot;Pendiente&quot;,&quot;Gestionada Positiva&quot;,&quot;Cerrado&quot;, &quot;Cancelado&quot;, &quot;Cancelado&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>