force-app/main/default/objects/Activity/fields/AV_FechaFinAccionComercial__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaFinAccionComercial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha fin de la acción comercial</label>
    <type>Date</type>
</CustomField>