force-app/main/default/objects/Activity/fields/AV_FechaInicioVigencia__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaInicioVigencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha inicio vigencia</label>
    <type>Date</type>
</CustomField>