force-app/main/default/objects/Activity/fields/AV_InOutbound__c.field-meta.xml
<CustomField>
    <fullName>AV_InOutbound__c</fullName>
    <description>Indicador de si la tarea es de entrada o salida</description>
    <inlineHelpText>Entrada indica que es un contacto que ha sido recibido por el Gestor.
Salida indica que es un contacto que ha sido enviado por el Gestor.</inlineHelpText>
    <label>Iniciador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Empleado</label>
            </value>
            <value>
                <fullName>Entrada</fullName>
                <label>Empleado Old</label>
            </value>
            <value>
                <fullName>Salida</fullName>
                <label>Cliente Old</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>