force-app/main/default/objects/Activity/fields/AV_MemorableInterview__c.field-meta.xml
<CustomField>
    <fullName>AV_MemorableInterview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrevista Memorable</label>
    <type>Checkbox</type>
</CustomField>