force-app/main/default/objects/Activity/fields/AV_Origen__c.field-meta.xml
<CustomField>
    <fullName>AV_Origen__c</fullName>
    <description>Nombre del tipo de registro</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen</label>
    <type>Text</type>
</CustomField>