force-app/main/default/objects/Activity/fields/AV_OrigenAct__c.field-meta.xml
<CustomField>
    <fullName>AV_OrigenAct__c</fullName>
    <description>Campo que muestra el tipo de origen de la actividad.</description>
    <label>Origen Act</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AV_AccionComercial</fullName>
                <label>Acción Comercial</label>
            </value>
            <value>
                <fullName>AV_AlertaComercial</fullName>
                <label>Alerta Comercial</label>
            </value>
            <value>
                <fullName>AV_CitasNoCerradas</fullName>
                <label>Citas no cerradas</label>
            </value>
            <value>
                <fullName>AV_CitasPrevias</fullName>
                <label>Citas Previas</label>
            </value>
            <value>
                <fullName>AV_ContactosGCF</fullName>
                <label>Tareas AVE</label>
            </value>
            <value>
                <fullName>AV_CloseDeLoop</fullName>
                <label>Experiencia Cliente</label>
            </value>
            <value>
                <fullName>AV_IniciativaGestora</fullName>
                <label>Iniciativa Gestor/a</label>
            </value>
            <value>
                <fullName>AV_Llamadas</fullName>
                <label>Llamadas</label>
            </value>
            <value>
                <fullName>AV_Morosidad</fullName>
                <label>Morosidad</label>
            </value>
            <value>
                <fullName>AV_Muro</fullName>
                <label>Muro</label>
            </value>
            <value>
                <fullName>AV_Normativo</fullName>
                <label>Normativo</label>
            </value>
            <value>
                <fullName>AV_OnBoarding</fullName>
                <label>OnBoarding</label>
            </value>
            <value>
                <fullName>AV_Otros</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>AV_Priorizador</fullName>
                <label>Priorizador</label>
            </value>
            <value>
                <fullName>AV_R2B</fullName>
                <label>R2B</label>
            </value>
            <value>
                <fullName>AV_Avisos</fullName>
                <label>Avisos</label>
            </value>
            <value>
                <fullName>AV_ContactosGCF_Online</fullName>
                <label>Contacto GCF Online</label>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>AV_AlertasComerciales</fullName>
                <isActive>false</isActive>
                <label>Alertas comerciales</label>
            </value>
            <value>
                <fullName>AV_IniciativaGestor</fullName>
                <isActive>false</isActive>
                <label>Iniciativa Gestor (Oportunidades Gestor)</label>
            </value>
            <value>
                <fullName>AV_OnboardingIntouch</fullName>
                <isActive>false</isActive>
                <label>Onboarding Intouch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>