force-app/main/default/objects/Activity/fields/AV_OverdueEvent__c.field-meta.xml
<CustomField>
    <fullName>AV_OverdueEvent__c</fullName>
    <formula>AND((MILLISECOND(TIMEVALUE(ActivityDateTime)) + (DurationInMinutes * 60 * 1000)) &gt; MILLISECOND(TIMEVALUE(TIMENOW())), ActivityDateTime &lt; NOW(), TEXT(CSBD_Evento_Estado__c) = &apos;Pendiente&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Event</label>
    <type>Checkbox</type>
</CustomField>