force-app/main/default/objects/Activity/fields/AV_PEA__c.field-meta.xml
<CustomField>
    <fullName>AV_PEA__c</fullName>
    <description>PEA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PEA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>