force-app/main/default/objects/Activity/fields/AV_PersonaContactada__c.field-meta.xml
<CustomField>
    <fullName>AV_PersonaContactada__c</fullName>
    <formula>IF(!(ISBLANK(CC_Empleado_Gestor__c)),HYPERLINK(&quot;/lightning/r/Account/&quot;+CC_Empleado_Gestor__c+&quot;/view&quot;,CC_Empleado_Gestor__r.FirstName+&quot; &quot;+CC_Empleado_Gestor__r.LastName,&quot;_self&quot;),&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Persona Contactada</label>
    <type>Text</type>
</CustomField>