force-app/main/default/objects/Activity/fields/AV_PrioritizingSort__c.field-meta.xml
<CustomField>
    <fullName>AV_PrioritizingSort__c</fullName>
    <label>Ordenación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>