force-app/main/default/objects/Activity/fields/AV_Priority__c.field-meta.xml
<CustomField>
    <fullName>AV_Priority__c</fullName>
    <formula>CASE( Priority , 
    &apos;Y&apos;, &apos;1. Muy Alta&apos;, 
    &apos;A&apos;, &apos;2. Alta&apos;,
    &apos;M&apos;, &apos;3. Media&apos;
    ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridad</label>
    <type>Text</type>
</CustomField>