force-app/main/default/objects/Activity/fields/AV_PriorityTask__c.field-meta.xml
<CustomField>
    <fullName>AV_PriorityTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para reporter</description>
    <label>Tarea Prioritaria</label>
    <type>Checkbox</type>
</CustomField>