force-app/main/default/objects/Activity/fields/AV_Task__c.field-meta.xml
<CustomField>
    <fullName>AV_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Tarea asociada a (Cabecera-Tarea)</description>
    <label>Tarea Asociada</label>
    <referenceTo>AV_HeaderCustomActivity__c</referenceTo>
    <relationshipLabel>Tareas</relationshipLabel>
    <relationshipName>Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>