force-app/main/default/objects/Activity/fields/AV_Tipo__c.field-meta.xml
<CustomField>
    <fullName>AV_Tipo__c</fullName>
    <description>tipo de tarea</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTO</fullName>
                <label>Cita en la oficina</label>
            </value>
            <value>
                <fullName>CTF</fullName>
                <label>Cita telefónica</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>Entrevista centro</label>
            </value>
            <value>
                <fullName>VC</fullName>
                <label>Visita Cliente</label>
            </value>
            <value>
                <fullName>VLD</fullName>
                <label>Videollamada</label>
            </value>
            <value>
                <fullName>CTOOC</fullName>
                <label>Cita en otra oficina CaixaBank</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>Visita del gestor</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>Llamada telefónica</label>
            </value>
            <value>
                <fullName>LMD</fullName>
                <label>Llamada</label>
            </value>
            <value>
                <fullName>ESE</fullName>
                <label>Email,sms,etc</label>
            </value>
            <value>
                <fullName>030</fullName>
                <label>Muro</label>
            </value>
            <value>
                <fullName>FH</fullName>
                <label>Firma hipoteca</label>
            </value>
            <value>
                <fullName>OFT</fullName>
                <label>Tarea Oficina</label>
            </value>
            <value>
                <fullName>COTF</fullName>
                <label>Comentario TF</label>
            </value>
            <value>
                <fullName>022</fullName>
                <isActive>false</isActive>
                <label>Atención al cliente interno</label>
            </value>
            <value>
                <fullName>012</fullName>
                <isActive>false</isActive>
                <label>Banca teléfono</label>
            </value>
            <value>
                <fullName>006</fullName>
                <isActive>false</isActive>
                <label>Carta</label>
            </value>
            <value>
                <fullName>032</fullName>
                <isActive>false</isActive>
                <label>Cita anulada</label>
            </value>
            <value>
                <fullName>037</fullName>
                <isActive>false</isActive>
                <label>Cita anulada gestor</label>
            </value>
            <value>
                <fullName>031</fullName>
                <isActive>false</isActive>
                <label>Cita previa</label>
            </value>
            <value>
                <fullName>042</fullName>
                <isActive>false</isActive>
                <label>Cita previa entrevista</label>
            </value>
            <value>
                <fullName>043</fullName>
                <isActive>false</isActive>
                <label>Cita previa llamada</label>
            </value>
            <value>
                <fullName>041</fullName>
                <isActive>false</isActive>
                <label>Cita previa visita</label>
            </value>
            <value>
                <fullName>005</fullName>
                <isActive>false</isActive>
                <label>Comunicado</label>
            </value>
            <value>
                <fullName>050</fullName>
                <isActive>false</isActive>
                <label>Comunicado comercial</label>
            </value>
            <value>
                <fullName>027</fullName>
                <isActive>false</isActive>
                <label>Contacto comercial</label>
            </value>
            <value>
                <fullName>047</fullName>
                <isActive>false</isActive>
                <label>Contacto comercial BPR</label>
            </value>
            <value>
                <fullName>029</fullName>
                <isActive>false</isActive>
                <label>Contacto protocolo</label>
            </value>
            <value>
                <fullName>049</fullName>
                <isActive>false</isActive>
                <label>Contacto protocolo BPR</label>
            </value>
            <value>
                <fullName>071</fullName>
                <isActive>false</isActive>
                <label>Contratación telefónica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>