force-app/main/default/objects/Activity/fields/AV_ToDelete__c.field-meta.xml
<CustomField>
    <fullName>AV_ToDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador para eliminar el registro</description>
    <label>To Delete</label>
    <type>Checkbox</type>
</CustomField>