force-app/main/default/objects/Activity/fields/AV_Type__c.field-meta.xml
<CustomField>
    <fullName>AV_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>