force-app/main/default/objects/Activity/fields/AV_UserId__c.field-meta.xml
<CustomField>
    <fullName>AV_UserId__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Id</label>
    <type>Text</type>
</CustomField>