force-app/main/default/objects/Activity/fields/AV_Valor4__c.field-meta.xml
<CustomField>
    <fullName>AV_Valor4__c</fullName>
    <description>Valor 4</description>
    <encryptionScheme>None</encryptionScheme>
    <label>-</label>
    <length>255</length>
    <type>Text</type>
</CustomField>