force-app/main/default/objects/Activity/fields/AV_VerRegistro__c.field-meta.xml
<CustomField>
    <fullName>AV_VerRegistro__c</fullName>
    <formula>IF(!ISBLANK(AV_Valor1__c),HYPERLINK(&quot;/lightning/r/Task/&quot;+ Id +&quot;/view&quot;, AV_Valor1__c, &quot;_self&quot;),
IF(!ISBLANK(Subject),HYPERLINK(&quot;/lightning/r/Task/&quot;+ Id +&quot;/view&quot;, Subject, &quot;_self&quot;), 
HYPERLINK(&quot;/lightning/r/Task/&quot;+ Id +&quot;/view&quot;, &quot;-&quot;, &quot;_self&quot;)
))</formula>
    <label>VerRegistro</label>
    <type>Text</type>
</CustomField>