force-app/main/default/objects/Activity/fields/AV_VisibleByLoggedUser__c.field-meta.xml
<CustomField>
    <fullName>AV_VisibleByLoggedUser__c</fullName>
    <formula>IF(OwnerId=$User.Id, true,
IF( ISBLANK( AV_CodigoGestorAsignado__c ), false, IF(  AV_CodigoGestorAsignado__c =  $User.AV_ExternalID__c ,true,false))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AV_VisibleByLoggedUser</label>
    <type>Checkbox</type>
</CustomField>