force-app/main/default/objects/Activity/fields/AV_VisiblePorElClienteEnNow__c.field-meta.xml
<CustomField>
    <fullName>AV_VisiblePorElClienteEnNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible por el cliente en Now</label>
    <type>Checkbox</type>
</CustomField>