force-app/main/default/objects/Activity/fields/CBK_ForbiddenWords__c.field-meta.xml
<CustomField>
    <fullName>CBK_ForbiddenWords__c</fullName>
    <description>Almacena las palabras prohibidas de tipo Aviso que serán mostradas como advertencia.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Palabras prohibidas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>