force-app/main/default/objects/Activity/fields/CC_Actividad_Relacionada_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Actividad_Relacionada_Id__c</fullName>
    <description>Guarda una clave foránea contra el objeto actividad. Es de tipo texto ya que SFDC no permite a mayo de 2019 campos de tipo Lookup contra el objeto actividad.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CC_Actividad_Relacionada_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>