force-app/main/default/objects/Activity/fields/CC_Automatica__c.field-meta.xml
<CustomField>
    <fullName>CC_Automatica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la actividad ha sido creado por el usuario &quot;System&quot; o por el usuario &quot;Auotmated Process&quot;</description>
    <label>Creada por usuario de sistema</label>
    <type>Checkbox</type>
</CustomField>