force-app/main/default/objects/Activity/fields/CC_Categoria__c.field-meta.xml
<CustomField>
    <fullName>CC_Categoria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Categoría</label>
    <length>50</length>
    <type>Text</type>
</CustomField>