force-app/main/default/objects/Activity/fields/CC_Consulta__c.field-meta.xml
<CustomField>
    <fullName>CC_Consulta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consulta</label>
    <length>18</length>
    <type>Text</type>
</CustomField>