force-app/main/default/objects/Activity/fields/CC_Correo_Asociado_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Correo_Asociado_Id__c</fullName>
    <description>Guarda el Id del correo asociado a la actividad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo asociado Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>