force-app/main/default/objects/Activity/fields/CC_Fecha_1_Reclamacion_Auto__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_1_Reclamacion_Auto__c</fullName>
    <description>Fecha calculada por el sistema que indica cuándo se debe hacer la primera reclamación de la tarea</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha 1ª Reclamación Automática</label>
    <type>DateTime</type>
</CustomField>