force-app/main/default/objects/Activity/fields/CC_Fecha_FinPlazo_SolInf__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_FinPlazo_SolInf__c</fullName>
    <description>Fecha en la que cumple el plazo de respuesta del cliente a una Solicitud de Información.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Fin Plazo Sol. Inf.</label>
    <type>DateTime</type>
</CustomField>