force-app/main/default/objects/Activity/fields/CC_Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Inicio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de inicio</label>
    <type>DateTime</type>
</CustomField>