force-app/main/default/objects/Activity/fields/CC_Grupo_Colaborador_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Grupo_Colaborador_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo colaborador</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_del</relationshipName>
    <type>Lookup</type>
</CustomField>