force-app/main/default/objects/Activity/fields/CC_Llamada_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Llamada_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Llamada</label>
    <referenceTo>CC_Llamada__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>