force-app/main/default/objects/Activity/fields/CC_Procesos_Aceptados__c.field-meta.xml
<CustomField>
    <fullName>CC_Procesos_Aceptados__c</fullName>
    <formula>IF(OR(CONTAINS(Subject, &apos;Rechazado&apos;), CONTAINS(Subject, &apos;Devuelto&apos;)), &apos;&apos;, &apos;Aceptadas&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procesos Aceptados</label>
    <type>Text</type>
</CustomField>