force-app/main/default/objects/Activity/fields/CC_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Record_Type_Name__c</fullName>
    <description>Nombre del RecordType para informes de Analytics</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>