force-app/main/default/objects/Activity/fields/CC_Solicitud_Informacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Solicitud_Informacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud de información</label>
    <type>Checkbox</type>
</CustomField>