force-app/main/default/objects/Activity/fields/CC_Telefono__c.field-meta.xml
<CustomField>
    <fullName>CC_Telefono__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Telefono</label>
    <type>Phone</type>
</CustomField>