force-app/main/default/objects/Activity/fields/CC_Tiempo_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_Resolucion__c</fullName>
    <label>Tiempo de resolución</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>