force-app/main/default/objects/Activity/fields/CC_Tiempo_respuesta_colaborador__c.field-meta.xml
<CustomField>
    <fullName>CC_Tiempo_respuesta_colaborador__c</fullName>
    <description>Tiempo transcurrido entre el traslado de un caso hasta su respuesta en dias</description>
    <formula>CC_Fecha_Fin__c - CreatedDate</formula>
    <label>Tiempo respuesta colaborador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>