force-app/main/default/objects/Activity/fields/CC_Ultima_Actualizacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Ultima_Actualizacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Última Actualización</label>
    <type>DateTime</type>
</CustomField>