force-app/main/default/objects/Activity/fields/CC_validacion_tarea_manual__c.field-meta.xml
<CustomField>
    <fullName>CC_validacion_tarea_manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación tarea manual</label>
    <type>Checkbox</type>
</CustomField>