force-app/main/default/objects/Activity/fields/CSBD_Email_Pendiente_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Email_Pendiente_Cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Pendiente Cliente Id (interno)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>