force-app/main/default/objects/Activity/fields/CSBD_Evento_Estado__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Evento_Estado__c</fullName>
    <description>Estado del evento de CSBD.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Gestionada Positiva</fullName>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Planificada</fullName>
            </value>
            <value>
                <fullName>Realizada</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
            <value>
                <fullName>RCS Enviado</fullName>
            </value>
            <value>
                <fullName>RCS Entregado</fullName>
            </value>
            <value>
                <fullName>RCS Entregado (SMS Alternativo)</fullName>
            </value>
            <value>
                <fullName>RCS Visto</fullName>
            </value>
            <value>
                <fullName>RCS Envío Fallido</fullName>
            </value>
            <value>
                <fullName>Cierre Caducada</fullName>
                <isActive>false</isActive>
                <label>Cierre Caducada</label>
            </value>
            <value>
                <fullName>Cierre Desactivada</fullName>
                <isActive>false</isActive>
                <label>Cierre Desactivada</label>
            </value>
            <value>
                <fullName>Desactivada</fullName>
                <isActive>false</isActive>
                <label>Desactivada</label>
            </value>
            <value>
                <fullName>Gestionada</fullName>
                <isActive>false</isActive>
                <label>Gestionada</label>
            </value>
            <value>
                <fullName>Gestionada negativa</fullName>
                <isActive>false</isActive>
                <label>Gestionada negativa</label>
            </value>
            <value>
                <fullName>Gestionado no localizado</fullName>
                <isActive>false</isActive>
                <label>Gestionado no localizado</label>
            </value>
            <value>
                <fullName>No gestionada</fullName>
                <isActive>false</isActive>
                <label>No gestionada</label>
            </value>
            <value>
                <fullName>Pendiente no localizado</fullName>
                <isActive>false</isActive>
                <label>Pendiente no localizado</label>
            </value>
            <value>
                <fullName>Pendiente revisar</fullName>
                <isActive>false</isActive>
                <label>Pendiente revisar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>